Prevent jumping content inside toolbar

--- a/view/base/web/css/style.less
+++ b/view/base/web/css/style.less
@@ -107,7 +107,7 @@
   top: 0;
   left: 0;
   bottom: 0;
-  width: 50px;
+  width: 100%;
   height: 45px;
   margin: 0;
   padding: 0;
@@ -118,8 +118,8 @@
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
   font-size: 13px !important;
   color: #ffffff !important;
-  &.expanded {
-    width: 100%;
+  &.collapsed {
+    width: 50px;
   }
 }
 
